--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+
+a{
+  text-decoration: none;
 }
-
-
