--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@ a{
 }
 
 .appFrame{
-  overflow: hidden;
+ 
   padding: 7%;
   padding-bottom: 5%;
   padding-top: 1%;
+  height: 100%;
   background-color:#afc99b;
-  z-index: 1
   
 }
 
@@ -27,6 +27,8 @@ body{
   font-size: 1.05rem;
   margin: 0;
   padding: 0;
+  height: 100vh;
+ 
 
 }
 
