--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -21,10 +21,10 @@
   
   }
   
-  .card-body {
+ /*  .card-body {
     background-color: #ecf0cc;
     
-  }
+  } */
   .cardBack{
 
     background-color: #ecf0cc;
