--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,12 @@ body{
   font-family: 'Lora', serif;
   font-size: 1.05rem;
   margin: 0;
-  padding: 0;
-
- 
-
+  padding-bottom: 4%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top:0% ;
+  overflow: hidden;
 }
-
-
-
 body::-webkit-scrollbar {
   width: 5px;
 }
@@ -44,10 +42,11 @@ body::-webkit-scrollbar-track {
 }
 
 html,body{
+ padding-bottom: 4%;
  height: 100%;
   background-color: #afc99b;
 }
-.appFrame{
-  height: 100vh;
 
-}
+
+
+
